@@ -1,24 +1,15 @@
 #include "CookieParser.h"
-#include <fstream>
+
 #include <cppunit/extensions/HelperMacros.h>
 
 namespace aria2 {
 
 class CookieParserTest:public CppUnit::TestFixture {
-
   CPPUNIT_TEST_SUITE(CookieParserTest);
   CPPUNIT_TEST(testParse);
-  CPPUNIT_TEST(testParse_file);
   CPPUNIT_TEST_SUITE_END();
-private:
-
 public:
-  void setUp() {
-  }
-
   void testParse();
-  
-  void testParse_file();
 };
 
 
@@ -27,7 +18,7 @@ CPPUNIT_TEST_SUITE_REGISTRATION( CookieParserTest );
 void CookieParserTest::testParse()
 {
   std::string str = "JSESSIONID=123456789; expires=Sun, 10-Jun-2007 11:00:00 GMT; path=/; domain=localhost; secure";
-  Cookie c = CookieParser().parse(str);
+  Cookie c = CookieParser().parse(str, "", "");
   CPPUNIT_ASSERT(c.good());
   CPPUNIT_ASSERT_EQUAL(std::string("JSESSIONID"), c.getName());
   CPPUNIT_ASSERT_EQUAL(std::string("123456789"), c.getValue());
@@ -49,7 +40,7 @@ void CookieParserTest::testParse()
   CPPUNIT_ASSERT_EQUAL(true, c.isSessionCookie());
 
   std::string str3 = "";
-  c = CookieParser().parse(str3);
+  c = CookieParser().parse(str3, "", "");
   CPPUNIT_ASSERT(!c.good());
 
 #ifndef __MINGW32__
@@ -65,7 +56,7 @@ void CookieParserTest::testParse()
   CPPUNIT_ASSERT_EQUAL(expire_time, c.getExpiry());
 
   std::string str5 = "k=v; expires=Sun, 10-Jun-07 11:00:00 GMT";
-  c = CookieParser().parse(str5);
+  c = CookieParser().parse(str5, "", "");
   CPPUNIT_ASSERT(c.good());
   CPPUNIT_ASSERT_EQUAL(std::string("k"), c.getName());
   CPPUNIT_ASSERT_EQUAL(std::string("v"), c.getValue());
@@ -74,27 +65,6 @@ void CookieParserTest::testParse()
   CPPUNIT_ASSERT_EQUAL(std::string(""), c.getPath());
   CPPUNIT_ASSERT(!c.isSecureCookie());
   CPPUNIT_ASSERT(!c.isSessionCookie());
-}
-
-void CookieParserTest::testParse_file()
-{
-  std::ifstream f("cookietest.txt", std::ios::binary);
-
-  Cookies cookies = CookieParser().parse(f);
-
-  CPPUNIT_ASSERT_EQUAL((int32_t)3, (int32_t)cookies.size());
-
-  Cookie c = cookies[0];
-  CPPUNIT_ASSERT_EQUAL(std::string("JSESSIONID"), c.getName());
-  CPPUNIT_ASSERT_EQUAL(std::string("123456789"), c.getValue());
-
-  c = cookies[1];
-  CPPUNIT_ASSERT_EQUAL(std::string("user"), c.getName());
-  CPPUNIT_ASSERT_EQUAL(std::string("me"), c.getValue());
-
-  c = cookies[2];
-  CPPUNIT_ASSERT_EQUAL(std::string("passwd"), c.getName());
-  CPPUNIT_ASSERT_EQUAL(std::string("secret"), c.getValue());
 }
 
 } // namespace aria2
